[gd_scene load_steps=5 format=3 uid="uid://d1nax10dhmntw"]

[ext_resource type="Texture2D" uid="uid://7uf7a70n28d6" path="res://assets/localmap-graphics/stonedoor.png" id="1_40l06"]
[ext_resource type="Script" path="res://scripts/localmapscripts/BuildablesOverlay.gd" id="1_ns1ht"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c57sk"]
bg_color = Color(0, 0, 0, 0.713726)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2b4g"]
bg_color = Color(0, 0, 0, 0.713726)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="BuildablesOverlay" type="CanvasLayer"]
script = ExtResource("1_ns1ht")

[node name="Panel" type="Panel" parent="."]
offset_left = 32.0
offset_top = 71.0
offset_right = 417.0
offset_bottom = 680.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c57sk")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 374.0
offset_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainerHBoxCraft" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxCraft"]
layout_mode = 2
text = "Crafting Stations"

[node name="HBoxCraft" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxCraft"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
vertical = true

[node name="Control" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainerHBoxStructures" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxStructures"]
layout_mode = 2
text = "Structures"

[node name="HBoxStructures" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxStructures"]
custom_minimum_size = Vector2(200, 190)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 6
vertical = true

[node name="Control2" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainerHBoxFurniture" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxFurniture"]
layout_mode = 2
text = "Furniture"

[node name="HBoxFurniture" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxFurniture"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control3" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainerHBoxStorage" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxStorage"]
layout_mode = 2
text = "Storage"

[node name="HBoxStorage" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxStorage"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Control4" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainerHBoxDeco" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxDeco"]
layout_mode = 2
text = "Deco"

[node name="HBoxDeco" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxDeco"]
layout_mode = 2

[node name="Control5" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainerHBoxFarm" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxFarm"]
layout_mode = 2
text = "Farming"

[node name="HBoxFarm" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxFarm"]
layout_mode = 2

[node name="Control6" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainerHBoxSpecial" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label7" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxSpecial"]
layout_mode = 2
text = "Special"

[node name="HBoxSpecial" type="FlowContainer" parent="Panel/ScrollContainer/VBoxContainer/VBoxContainerHBoxSpecial"]
layout_mode = 2

[node name="BuildAppraisalPanel" type="Panel" parent="."]
offset_left = 416.0
offset_top = 71.0
offset_right = 961.0
offset_bottom = 290.0
theme_override_styles/panel = SubResource("StyleBoxFlat_t2b4g")

[node name="TextureRect" type="TextureRect" parent="BuildAppraisalPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 36.0
offset_right = 120.0
offset_bottom = 136.0
texture = ExtResource("1_40l06")
expand_mode = 2

[node name="Name" type="Label" parent="BuildAppraisalPanel"]
layout_mode = 0
offset_left = 21.0
offset_top = 8.0
offset_right = 117.0
offset_bottom = 25.0
text = "Stone Door"

[node name="Desc" type="Label" parent="BuildAppraisalPanel"]
layout_mode = 0
offset_left = 17.0
offset_top = 144.0
offset_right = 535.0
offset_bottom = 206.0
text = "Simple stone door made from primitive materials."

[node name="Tags" type="RichTextLabel" parent="BuildAppraisalPanel"]
layout_mode = 0
offset_left = 348.0
offset_top = 39.0
offset_right = 530.0
offset_bottom = 136.0
bbcode_enabled = true
text = "Tags
Tags"
fit_content = true

[node name="Requirements" type="RichTextLabel" parent="BuildAppraisalPanel"]
layout_mode = 0
offset_left = 135.0
offset_top = 39.0
offset_right = 344.0
offset_bottom = 136.0
bbcode_enabled = true
text = "Requires:
10x Wood
10x Metal Junk
20x Stone"
